Fix column gap

--- a/src/styles/components/price-list.scss
+++ b/src/styles/components/price-list.scss
@@ -10,6 +10,6 @@
 
     @media (min-width: 660px) {
         grid-template-columns: repeat(3, 200px);
-        column-gap: 30px;
+        column-gap: 20px;
     }
 }
